--- a/.gitignore
+++ b/.gitignore
@@ -213,5 +213,4 @@ marimo/_lsp/
 __marimo__/
 
 # Streamlit
-.streamlit/secrets.tomlgit add .gitignore
-git commit -m "Add gitignore for env and venv"
+.streamlit/secrets.toml
