--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-API_TOKEN=
-API_ENDPOINT=
-TEAM_ID=
-USE_LLM_AGENT=
+API_TOKEN=<api_token>
+API_ENDPOINT=<api_endpoint>
+TEAM_ID=<team_id>
+USE_LLM_AGENT=true
